style: 扫雷小游戏

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,4 +1,16 @@
 {
     "@@locale": "en",
-    "appName": "Flutter Utils"
+    "appName": "Flutter Utils",
+    "mineSweeping": "Mine Sweeping Game!",
+    "winTitle": "Congratulation!!",
+    "winText": "You win!Time is ",
+    "playAgain": "Play Again",
+    "settingTitle": "Game Setting!",
+    "themeColor": "Choose Theme Color",
+    "gamePlay": "Game Difficulty",
+    "easy": "easy",
+    "normal": "normal",
+    "hard": "hard",
+    "gameOverTitle": "O!",
+    "gameOverText": "You lose!But Dont Mind,Try again will better"
 }
